# service/src/main/resources/api.yml
@@ -126,6 +126,28 @@ paths:
         404:
           description: Resource Not Found
 
+    delete:
+      summary: 'Delete an allocation by ID'
+      operationId: deleteAllocation
+      tags:
+        - allocation
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the allocation
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: 'Deleted Successfully'
+        404:
+          description: Resource Not Found
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
+
+
 components:
   schemas:
     CreateRoomDTO:
